--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^8.6.0",
+    "ffxiv-overlay-api": "^4.4.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
@@ -19,11 +20,14 @@
     "@antfu/eslint-config": "^0.25.1",
     "@iconify-json/carbon": "^1.1.5",
     "@types/node": "^17.0.42",
+    "@unocss/extractor-pug": "^0.39.3",
     "@unocss/reset": "^0.39.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "eslint": "^8.17.0",
     "jsdom": "^19.0.0",
+    "less": "^4.1.3",
     "pnpm": "^7.2.1",
+    "pug": "^3.0.2",
     "typescript": "^4.7.3",
     "unocss": "^0.39.0",
     "unplugin-auto-import": "^0.8.8",
