--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "FFXIVTwinHelper",
+  "name": "ffxiv-twin-helper",
   "version": "0.0.1",
   "private": true,
   "packageManager": "pnpm@7.1.5",
+  "license": "MIT",
   "scripts": {
     "build": "vite build",
     "dev": "vite --port 3333 --open",
